--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -41,6 +41,7 @@
           font-size: 18px;
           margin-bottom: 16px;
           .fa-twitter {
+            text-decoration: none;
             cursor: pointer;
             color: white;
             font-size: 1em
