--- a/app/views/stocks/_show.html.haml
+++ b/app/views/stocks/_show.html.haml
@@ -1,15 +1,13 @@
 - if user_signed_in?
   - if article.stock_user(current_user.id) || @stock.is_stocked == 1
-    = button_to article_stock_path(article_id: @stock.article.id, is_stocked: 1), method: :delete, class: "folder-button", remote: true do
+    = button_to article_stocks_path(article_id: @stock.article.id, is_stocked: 0), method: :create, class: "folder-button", remote: true do
       %span.fa-2x#folder.fa-stack
         %i.fas.fa-folder.fa-stack-2x
           %i.fas.fa-check.fa-stack-1x
   - else
-    = button_to article_stocks_path(article_id: @stock.article.id, is_stocked: 0), method: :delete, class: "folder-button", remote: true do
+    = button_to article_stock_path(article_id: @stock.article.id, is_stocked: 1), method: :delete, class: "folder-button", remote: true do
       %span.fa-2x#folder
         %i.fas.fa-folder-open
-
 - else
   %span.fa-2x#folder
     %i.fas.fa-folder-open
-
